# Fagprojekt

./: .gitignore  LICENSE  MODEL_DESCRIPTIONS.md  Makefile  README.md  pyproject.toml  setup.py  top
data/: README.md
data/processed/: asia_lung_baseline_metadata.json  asia_lung_baseline_test.csv  asia_lung_tensor_metadata.json  asia_lung_tensor_test.csv  asia_lung_tensor_train.csv  asia_lung_tensor_val.csv  balance_scale_baseline_metadata.json  balance_scale_tensor_train.csv  balance_scale_tensor_val.csv  car_evaluation_baseline_test.csv  car_evaluation_tensor_metadata.json  conf_ad_tensor_metadata.json  conf_ad_tensor_test.csv  coronary_baseline_metadata.json  coronary_baseline_train.csv  coronary_tensor_val.csv  credit_approval_baseline_metadata.json  credit_approval_baseline_val.csv  credit_approval_tensor_test.csv  credit_approval_tensor_val.csv  dmft_tensor_metadata.json  dmft_tensor_val.csv  german_gss_tensor_metadata.json  house_votes_84_baseline_val.csv  house_votes_84_tensor_test.csv  krkopt_tensor_metadata.json  krkopt_tensor_train.csv  krkopt_tensor_val.csv  led7_baseline_metadata.json  led7_tensor_train.csv  lenses_baseline_metadata.json  lenses_baseline_val.csv  mofn_baseline_metadata.json  mofn_tensor_metadata.json  monk_1_baseline_metadata.json  monk_1_baseline_test.csv  monk_1_tensor_test.csv  monk_1_tensor_train.csv  monk_2_baseline_metadata.json  monk_2_tensor_metadata.json  (+22 more)
docs/: AI_USAGE.md  CODING_CHECKLIST.md  CONFIGURATION_AND_UTILITIES.md  DATA_PIPELINE.md  HPC_JOBS.md  MODEL_DESCRIPTIONS.md  Makefile  README.md  RESULTS_AND_SUMMARIES.md  TRAINING_AND_EXPERIMENTS.md  code_dependencies.md  conf.py  index.rst  make.bat
hpc/: cpd.sh  cpd2_aps_failure.sh  cpd2_census_income_kdd.sh  cpd2_phiusiil_phishing.sh  cpd2_rest.sh  cpd2_rt_iot2022.sh  cpd2_skin_segmentation.sh  lr.sh  lr2_aps_failure.sh  lr2_census_income_kdd.sh  lr2_phiusiil_phishing.sh  lr2_rest.sh  lr2_rt_iot2022.sh  lr2_skin_segmentation.sh  mba.sh  mba2_aps_failure.sh  mba2_census_income_kdd.sh  mba2_phiusiil_phishing.sh  mba2_rest.sh  mba2_rt_iot2022.sh  mba2_skin_segmentation.sh  mlp.sh  mlp2_aps_failure.sh  mlp2_census_income_kdd.sh  mlp2_phiusiil_phishing.sh  mlp2_rest.sh  mlp2_rt_iot2022.sh  mlp2_skin_segmentation.sh  rf.sh  rf2.sh  rf2_aps_failure.sh  test_lr.sh  test_mba2_new.sh  test_mba_old.sh  tr.sh  tr2_aps_failure.sh  tr2_census_income_kdd.sh  tr2_census_income_kdd_fold5.sh  tr2_phiusiil_phishing.sh  tr2_rest.sh  (+9 more)
notebooks/: questions.md
results/: benchmark_summary.csv
src/: run_experiments.py  summarize_results.py  train.py  tune_hyperparameters.py
src/models/: cpd.py  (+14 more)
(+10896 files in other folders)
