[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "src"
version = "0.1.0"
description = "Discrete tabular classification experiments"
authors = [{ name = "Gustav" }]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
  "click",
  "flake8",
  "python-dotenv>=0.5.1",
  "numpy<2,>=1.24.4",
  "pandas>=2.0.3",
  "scikit-learn>=1.3.2",
  "lightning>=2.3.3",
  "torch>=2.5.1; sys_platform == 'darwin' and platform_machine == 'arm64' or sys_platform != 'darwin'",
  "torch<=2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
