[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "src"
version = "0.1.0"
description = "Discrete tabular classification experiments"
authors = [{ name = "Gustav" }]
license = { text = "MIT" }
requires-python = ">=3.10,<3.13"
dependencies = [
  "click",
  "flake8",
  "python-dotenv>=0.5.1",
  "numpy>=1.26.4,<2",
  "pandas>=2.2,<3",
  "scikit-learn>=1.3.2",
  "lightning>=2.3.3",
  "optuna>=3.6,<5",
  "torch>=2.1.0,<2.5.0; sys_platform == 'darwin' and platform_machine == 'arm64' or sys_platform != 'darwin'",
  "torch<=2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]