[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "src"
version = "0.1.0"
description = "Discrete tabular classification experiments"
authors = [{ name = "Gustav" }]
license = { text = "MIT" }
requires-python = ">=3.10,<3.13"
dependencies = [
  "click",
  "flake8",
  "python-dotenv>=0.5.1",
  "numpy>=1.26.4,<2",
  "pandas>=2.2,<3",
  "scikit-learn>=1.3.2",
  "lightning>=2.3.3",
  "optuna>=3.6,<5",
  "torch>=2.1.0,<2.5.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
  "torch>=2.1.0,<2.5.0; sys_platform == 'win32' or sys_platform == 'linux'",
  "torch<=2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
  "matplotlib>=3.10.9",
  "scikit-posthocs>=0.14.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
